style(AddEntry): prevent button spacing when error message displayed

--- a/client/src/components/AddEntry/AddEntry.css
+++ b/client/src/components/AddEntry/AddEntry.css
@@ -32,7 +32,8 @@
 
 .button-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 100px;
   width: 100%;
 }
 
